--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,33 +2,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Karla:wght@800&display=swap');
 
 /* 
-    #10B981
-    #273549
-    #6B7280
+    #1F2937 - background color for the body
+    #10B981 - background color for the generate password button
+    #273549 - background color for generated password 
+    #55F991 - color text for generated password 
     white text for green button 
 
-
  */
+
 body {
     margin: 0; 
-    background-color: #ECFDF5;
+    background-color: #1F2937;
+    color: #FAF9F6;
 }
+
 
 /* Utility class */
 .text-drk-green {
     color: #10B981;
-
 }
+
 .text-light-green {
-    color: #5DEF92;
+    color: #4ADF86;
 }
 
-.btn-password-style {
+/* .btn-password-style {
 
-}
+} */
 
 
 /* Font */
+body, .password-section button {
+    font-size: 20px;
+}
+
 h1{
     font-family: 'Karla', sans-serif;
     font-weight: bolder; 
@@ -45,15 +52,53 @@ div h1 {
 }
 
 div h4 {
-    margin: 5px 0 0 0;
+    margin: 0;
     color: rgb(224, 207, 207);
 }
 
-.text-password-style {
-    
+main {
+    /* border: 1px solid red;  */
+    margin: 115px 52px;
+}
+
+div h4 {
+    margin-top: 5px;
 }
 
 
+.generated-passwords {
+    display: flex;
+    flex-direction: row;
+}
+
+.generated-passwords button {
+    /* border: 1px solid red; */
+    margin-right: 30px;
+}
+
+.text-password-style {
+    border: none;
+    background-color: #273549;
+}
+
+.password-section {
+    /* border: 1px solid red; */
+    margin-top: 50px;    
+}
+
+.btn-generate-style {
+    color: #f8f8f8;
+    margin-bottom: 34.5px;
+    border: none;
+    background-color: #10B981;
+    padding: 9px 17px 9px 15px;
+    border-radius: 7px;
+}
+
+.border-bottom-line {
+    border-bottom: 2px solid red;
+    margin-bottom: 35.5px;
+}
 
 
 
@@ -61,5 +106,6 @@ div h4 {
 
 /* Question */
 /* For example if color A is green and color B is a different 
-    shade of green how would you provide a class name for them ?
+    shade of green what would be the appropriate utility class name for them ?
+    i.e green & light-green ? 
      */
