Styling for the range slider

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,22 +127,67 @@ button {
 /* Password slider */
 /* Adapted from https://css-tricks.com/value-bubbles-for-range-inputs/
     Had to read and take snippet of code on how to create range slider with bubbles showing the current value */
-.range-slider-container {
-    display: inline;
+
+.range-container {
+    display: inline; 
     accent-color: #10B981;
-}
-
-.range {
 
 }
 
-.bubble {
+.range-text {
+    width: 20px;
+    text-align: center;
 
 }
 
-.bubble::after {
+/* .bubble {
+    background: #273549;
+    color: white;
+    padding: 4px 12px;
+    position: absolute;
+    position: absolute;
+    border-radius: 4px;
+    left: 50%;
+    transform: translateX(-50%);
 
-}
+     background: black;
+  color: white;
+  padding: 4px 12px;
+  position: absolute;
+  border-radius: 4px;
+  left: 50%;
+  transform: translateX(-50%); 
+
+} */
+
+/* .bubble::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: black;
+    top: -1px;
+    left: 50%;
+
+    content: "";
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: black;
+  top: -1px;
+  left: 50%; 
+
+} */
+  
+  /* body {
+    margin: 2rem;
+  } */
+  
+  /* input[type="range"] {
+    accent-color: coral;
+  } */
+  
+
 
 
 
