--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 /* Font */
-body, .password-section button {
+body, section button {
     font-size: 20px;
 }
 
@@ -57,16 +57,18 @@ main {
     margin: 115px 52px;
 }
 
-div h1 {
+header h1 {
     margin: 0;
 }
 
-div h4 {
+header h4 {
     margin-top: 5px;
     /* color: rgb(224, 207, 207); */
 }
 
-.text-section {
+header{
+    padding: 0;
+    margin: 0;
     margin-bottom: 50px;
 }
 
@@ -93,7 +95,7 @@ button {
     background-color: #273549;
 }
 
-.password-section {
+section {
     /* border: 1px solid red; */
     margin-top: 50px;    
 }
