--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,7 +129,15 @@ section {
 .range-container {
     display: inline; 
     accent-color: #10B981; 
+    
 }
+.range-container input {
+    vertical-align: bottom;
+    height: 65px;
+    /* border: 1px solid red; */
+    
+}
+
 
 .range-text {
     width: 20px;
@@ -220,6 +228,7 @@ section {
     border-radius: 50%;
   }
 
+}
 
 /* Question */
 /* For example if color A is green and color B is a different 
@@ -232,6 +241,7 @@ section {
    What I've tried:
         Vertical align
         text align 
+        Soln - https://stackoverflow.com/questions/18704160/try-to-align-a-span-and-an-input - apply the vertical align rule and add height.
                   2 - The generated password text seem to fight eachother for space. One looks cramped while the other 
                         is stretched out 
 
